--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,13 +27,13 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>Fullstack software engineer, development operations and hobby system administrator.</p>
+          <p>Software engineering, development operations and system administration.</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button" itemprop="email">Contact me</a>
+        <!-- a href="mailto:{{ site.resume_contact_email }}" class="contact-button" itemprop="email">Contact me</a -->
         {% elsif site.resume_looking_for_work == 'no' %}
-        <a class="contact-button not-looking">I'm not looking for work right now.</a>
+        <!-- a class="contact-button not-looking">I'm not looking for work right now.</a -->
         {% else %}
         {% endif %}
 
@@ -47,35 +47,23 @@
           <h2>Experience</h2>
         </header>
 
-        <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Springfield Nuclear Power Plant</h3>
-          <h4 class="resume-item-details" itemprop="description">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
-          <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
-          <ul class="resume-item-list">
-            <li>Ate lots of donuts</li>
-            <li>Fell asleep rarely</li>
-            <li>Left promptly at end of day (sometimes earlier)</li>
-          </ul>
-          <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
+          <h3 class="resume-item-title" itemprop="name">Motion Intelligence GmbH, route360.net</h3>
+          <h4 class="resume-item-details" itemprop="description">Research Scholar &bull; Apr, 2016 &mdash; Present</h4>
+          <p class="resume-item-copy">Travel Time Maps, Transportation Networks, Web-based Geovisualization</p>
+        </div>
 
-        </div><!-- end of resume-item -->
-
-        <!-- another resume item -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
-          <h4 class="resume-item-details" itemprop="description">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
-          <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
+          <h3 class="resume-item-title" itemprop="name">StimmungsApp n.e.V., votesapp.net</h3>
+          <h4 class="resume-item-details" itemprop="description">Blockchain Architect &bull; Oct, 2015 &mdash; May, 2016</h4>
+          <p class="resume-item-copy">Liquid Democracy, Blockchain Voting, Mobile Participation</p>
+        </div>
 
-        </div><!-- end of resume-item -->
-
-        <!-- by now you're getting the picture... -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Simpson Lazer Tag</h3>
-          <h4 class="resume-item-details" itemprop="description">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
-          <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
-
-        </div><!-- end of resume-item -->
+          <h3 class="resume-item-title" itemprop="name">Parlamentwatch e.V., abgeordnetenwatch.de</h3>
+          <h4 class="resume-item-details" itemprop="description">Backend Developer &bull; Apr, 2013 &mdash; Dec, 2014</h4>
+          <p class="resume-item-copy">Digital Empowerment, Transparency, Content Migration, Drupal Integration</p>
+        </div>
 
       </section>
       <!-- end Experience -->
@@ -90,9 +78,21 @@
         </header>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">Springfield College</h3>
-          <h4 class="resume-item-details" itemprop="description">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
-          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+          <h3 class="resume-item-title" itemprop="name">Hasso-Plattner-Institute</h3>
+          <h4 class="resume-item-details" itemprop="description">Computer Graphics Systems, PhD &bull; 2017 &mdash; Future</h4>
+          <p class="resume-item-copy">Computer Graphics, Spatial Analytics, Geovisualization, Urban Complexity</p>
+        </div>
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name">University of Potsdam</h3>
+          <h4 class="resume-item-details" itemprop="description">Geoinforation and Visualization, MSc &bull; 2012 &mdash; 2017</h4>
+          <p class="resume-item-copy">Geographic Information Sciences, Geovisualization, Computer Graphics</p>
+        </div>
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name">Hochschule für Technik und Wirtschaft Berlin, University of Applied Sciences</h3>
+          <h4 class="resume-item-details" itemprop="description">Industrial Environmental Informatics, BSct &bull; 2008 &mdash; 2012</h4>
+          <p class="resume-item-copy">Applied Computer Sciences, Software Engineering, Green IT, Environmental Management</p>
         </div>
 
       </section>
@@ -224,8 +224,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">&copy; 1987-2016 Afri Schoedon. No cat had to be pictured for this site.</p>
       </footer>
 
     </div>
