--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -48,19 +48,19 @@
         </header>
 
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Motion Intelligence GmbH, route360.net</h3>
+          <h3 class="resume-item-title" itemprop="name">Motion Intelligence GmbH, <a href="http://route360.net" target="_blank">route360.net</a></h3>
           <h4 class="resume-item-details" itemprop="description">Research Scholar &bull; Apr, 2016 &mdash; Present</h4>
           <p class="resume-item-copy">Travel Time Maps, Transportation Networks, Web-based Geovisualization</p>
         </div>
 
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">StimmungsApp n.e.V., votesapp.net</h3>
+          <h3 class="resume-item-title" itemprop="name">StimmungsApp n.e.V., <a href="http://votesapp.net" target="_blank">votesapp.net</a></h3>
           <h4 class="resume-item-details" itemprop="description">Blockchain Architect &bull; Oct, 2015 &mdash; May, 2016</h4>
           <p class="resume-item-copy">Liquid Democracy, Blockchain Voting, Mobile Participation</p>
         </div>
 
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Parlamentwatch e.V., abgeordnetenwatch.de</h3>
+          <h3 class="resume-item-title" itemprop="name">Parlamentwatch e.V., <a href="http://abgeordnetenwatch.de" target="_blank">abgeordnetenwatch.de</a></h3>
           <h4 class="resume-item-details" itemprop="description">Backend Developer &bull; Apr, 2013 &mdash; Dec, 2014</h4>
           <p class="resume-item-copy">Digital Empowerment, Transparency, Content Migration, Drupal Integration</p>
         </div>
@@ -78,19 +78,19 @@
         </header>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">Hasso-Plattner-Institute</h3>
+          <h3 class="resume-item-title" itemprop="name">Hasso-Plattner-Institute<a href="http://hpi.de" target="_blank">hpi.de</a></h3>
           <h4 class="resume-item-details" itemprop="description">Computer Graphics Systems, PhD &bull; 2017 &mdash; Future</h4>
           <p class="resume-item-copy">Computer Graphics, Spatial Analytics, Geovisualization, Urban Complexity</p>
         </div>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">University of Potsdam</h3>
+          <h3 class="resume-item-title" itemprop="name">University of Potsdam<a href="http://uni-potsdam.de" target="_blank">uni-potsdam.de</a></h3>
           <h4 class="resume-item-details" itemprop="description">Geoinforation and Visualization, MSc &bull; 2012 &mdash; 2017</h4>
           <p class="resume-item-copy">Geographic Information Sciences, Geovisualization, Computer Graphics</p>
         </div>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">Hochschule für Technik und Wirtschaft Berlin, University of Applied Sciences</h3>
+          <h3 class="resume-item-title" itemprop="name">HTW Berlin, University of Applied Sciences<a href="http://htw-berlin.de" target="_blank">htw-berlin.de</a></h3>
           <h4 class="resume-item-details" itemprop="description">Industrial Environmental Informatics, BSct &bull; 2008 &mdash; 2012</h4>
           <p class="resume-item-copy">Applied Computer Sciences, Software Engineering, Green IT, Environmental Management</p>
         </div>
@@ -189,15 +189,15 @@
         </header>
 
         <div class="resume-item">
-          <h3 class="resume-item-title"><a href="http://beerfortheworld.com">Beer for the World</a></h3>
-          <h4 class="resume-item-details">Volunteer &bull; 2008 &mdash; Present</h4>
-          <p class="resume-item-copy">Organized fund drives and participated in fundraising events for the benefit of families in third world countries without proper access to malt beverages.</p>
+          <h3 class="resume-item-title">FIfF e.V., <a href="http://fiff.de" target="_blank">fiff.de</a></h3>
+          <h4 class="resume-item-details">Member and Supporter &bull; 2013 &mdash; Present</h4>
+          <p class="resume-item-copy">Information Technology in Society, Responsibility, Cyberpeace</p>
         </div>
 
         <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Nuclear Workers Labor Union</h3>
-          <h4 class="resume-item-details">Member in Good Standin &bull; 1994 &mdash; Present</h4>
-          <p class="resume-item-copy">Founding member of the local nuclear workers labor union.</p>
+          <h3 class="resume-item-title">CCC e.V., <a href="http://ccc.de" target="_blank">ccc.de</a></h3>
+          <h4 class="resume-item-details">Member and Supporter &bull; 2012 &mdash; Present</h4>
+          <p class="resume-item-copy">Transparency in Government, Freedom of Information, Human Right to Communication</p>
         </div>
 
       </section>
