--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -31,7 +31,7 @@
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button" itemprop="email"><i class="fa fa-envelope"></i></a> <a href="{{ site.resume_contact_telegram }}" class="contact-button" itemprop="email"><i class="fa fa-paper-plane"></i></a>
+        <div style="text-align:center"><a href="mailto:{{ site.resume_contact_email }}" class="contact-button" itemprop="email"><i class="fa fa-envelope"></i></a> <a href="{{ site.resume_contact_telegram }}" class="contact-button" itemprop="email"><i class="fa fa-paper-plane"></i></a></div>
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking">I'm not looking for work right now.</a>
         {% else %}
